--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,7 +93,8 @@
     "utility": "cpp",
     "typeindex": "cpp",
     "typeinfo": "cpp",
-    "valarray": "cpp"
+    "valarray": "cpp",
+    "string_view": "cpp"
   },
   "C_Cpp.errorSquiggles": "disabled",
   "makefile.launchConfigurations": [
